@@ -497,6 +497,9 @@ warn_about_unrecognized_names = true
 ;   none: No units will ever retreat
 ;   all-units: All non-immobile units may retreat, even if they have only one move or are up against a faster opponent
 ;   if-faster: Units may retreat when they are faster than their opponent, for example a cavalry may retreat from a knight
+;   if-not-slower: Units may retreat when they are at least as fast as their opponent, for example a knight may retreat from another knight but not
+;     from a cavalry, and an infantry may retreat from another infantry
+;   if-fast-and-not-slower: Like if-not-slower but only fast (2+ move) units may retreat
 ; These settings don't change the fact that units cannot retreat when they start combat with 1 HP or are defending a city. They also do not change
 ; that naval units cannot retreat defensively (there is a separate option for that below).
 land_retreat_rules = standard
