@@ -15,6 +15,9 @@
 - Options to modify the special corruption rules for capital cities
   - allow_corruption_in_capital removes the rule fixing corruption at zero
   - special_capital_decorruption_effect sets the building-like decorruption bonus
+- Two new special retreat rules
+  - if-not-slower allows units to retreat as long as they're at least as fast as their opponent
+  - if-fast-and-not-slower is like if-not-slower except it does not allow 1-move units to retreat
 - For config file loading, use the text encoding that the game retrieves and records internally instead of assuming Windows-1252
 - aggressively_penalize_bankruptcy now alternates between selling buildings or disbanding units first for bankrupt AI players and every third turn cuts their research spending
 - Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
